--- a/devops/environment/example.env
+++ b/devops/environment/example.env
@@ -1,3 +1,2 @@
-NEXT_PUBLIC_ENVIRONMENT=local
-NEXT_PUBLIC_CARDANO_NETWORK=preprod
+NEXT_PUBLIC_SATURN_GRAPHQL_API_URL=https://api.saturnnft.io/graphql/
 SATURN_API_KEY=
