--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@tanstack/react-query": "^4.14.5",
     "clsx": "^1.2.1",
     "eslint": "^8.27.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "latest",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
