--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mercury-chat/react-chat": "^0.1.3",
     "@tanstack/react-query": "^4.14.5",
     "clsx": "^1.2.1",
     "eslint": "^8.27.0",
