--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "saturn-integration",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@mercury-chat/react-chat": "^0.1.3",
-    "@tanstack/react-query": "^4.14.5",
-    "clsx": "^1.2.1",
-    "eslint": "^8.27.0",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
-    "next": "latest",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.3",
-    "typescript": "^4.8.4"
-  }
+    "name": "saturn-integration",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@dcspark/cardano-multiplatform-lib-browser": "^3.1.2",
+        "@dcspark/cardano-multiplatform-lib-nodejs": "^3.1.2",
+        "@tanstack/react-query": "^4.14.5",
+        "clsx": "^1.2.1",
+        "eslint": "^8.27.0",
+        "graphql": "^16.6.0",
+        "graphql-request": "^5.0.0",
+        "next": "latest",
+        "prettier": "^2.7.1",
+        "prettier-plugin-tailwindcss": "^0.1.13",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.11.9",
+        "@types/react": "^18.0.25",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.3",
+        "typescript": "^4.8.4"
+    }
 }
